--- a/app/src/main/res/drawable/checkbox.xml
+++ b/app/src/main/res/drawable/checkbox.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_checked="true"
-        android:drawable="@drawable/check_checked0"
+        android:drawable="@drawable/mis_btn_selected"
         />
     <item
         android:state_checked="false"
-        android:drawable="@drawable/check_checked0"
+        android:drawable="@drawable/mis_btn_unselected"
         />
 </selector>
