--- a/app/src/main/res/layout/tree_list_item.xml
+++ b/app/src/main/res/layout/tree_list_item.xml
@@ -13,13 +13,22 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:src="@drawable/tree_ec" />
-
+    <CheckBox
+        android:id="@+id/cb_select_tree"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/id_treenode_icon"
+        android:layout_marginLeft="0dp"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
+        android:focusable="false"
+        />
     <TextView
         android:id="@+id/id_treenode_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/id_treenode_icon"
+        android:layout_toRightOf="@id/cb_select_tree"
         android:text="@string/app_name"
         android:textSize="18dip" />
 
